--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 
 .container {
     margin-top: 15px;
-    width: 60vw;
-    height: 60vh;
+    width: 70vw;
+    height: 80vh;
     border: 3px solid black;
     border-radius: 10px;
     display: grid;
@@ -34,10 +34,11 @@ body {
     background-color: #e2e8f0;
 }
 
-#restart {
+#restart,
+#start {
     font-size: 35px;
     background-color: #e2e8f0;
-    border: none;
+    /* border: none; */
 }
 
 .main {
@@ -56,7 +57,7 @@ body {
     gap: 0;
 }
 
-.btns {
+.square {
     background-color: #64748b;
     border: none;
     margin: 0;
@@ -66,21 +67,21 @@ body {
     font-weight: 700;
 }
 
-.btn1,
-.btn2,
-.btn3,
-.btn4,
-.btn5,
-.btn6 {
+#btn-0,
+#btn-1,
+#btn-2,
+#btn-3,
+#btn-4,
+#btn-5 {
     border-bottom: 3px solid black;
 }
 
-.btn1,
-.btn4,
-.btn7,
-.btn2,
-.btn5,
-.btn8 {
+#btn-0,
+#btn-3,
+#btn-6,
+#btn-1,
+#btn-4,
+#btn-7 {
     border-right: 3px solid black;
 }
 
